--- a/css/styles.css
+++ b/css/styles.css
@@ -108,17 +108,31 @@ img {
   letter-spacing: 0.02em;
   display: block;
   /*padding: 24px 0;*/
+  position: relative;
 }
+
 .nav-link {
   padding-top: 24px;
   padding-bottom: 24px;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
 .nav-link:focus {
   color: #404bbf;
 }
-
+.nav-link:active::after {
+  content: "";
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background: #404bbf;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+}
 address {
   font-style: normal;
 }
@@ -130,6 +144,9 @@ address {
 .header-adress-list {
   display: flex;
   gap: 40px;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-adress-link:hover,
@@ -143,10 +160,19 @@ address {
 .hero {
   padding: 188px 0;
   background-color: #2e2f42;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url("/images/people-office-1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .hero-container {
-  background-color: #2e2f42;
+  /* background-color: #2e2f42; */
   align-items: center;
   /* text-align: center; */
 }
@@ -183,6 +209,9 @@ address {
   border: none;
   margin-left: auto;
   margin-right: auto;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -209,6 +238,24 @@ address {
 
 .feature-item {
   width: calc((100% - 24px * 3) / 4);
+}
+
+.feature-item-icon-box {
+  display: flex;
+  border-radius: 4px;
+  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
+  background: var(--CLOUD, #f4f4fd);
+  width: 264px;
+  height: 112px;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.feature-item-icon {
+  width: 64px;
+  height: 64px;
 }
 
 .feature-subtitle {
@@ -265,6 +312,11 @@ address {
 
 .team-item-name {
   padding: 32px 0 32px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
 }
 
 .team-subtitle {
@@ -274,7 +326,7 @@ address {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  margin-bottom: 8px;
+  /* margin-bottom: 8px; */
 }
 
 .team-text {
@@ -284,8 +336,60 @@ address {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+  /* margin-bottom: 8px; */
 }
 
+.team-icons-list {
+  display: flex;
+  gap: 24px;
+  /* align-items: center; */
+  margin: auto;
+}
+.team-icons-list-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+/* .elipse {
+  height: 40px;
+  width: 40px;
+  position: relative;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  overflow: hidden;
+} */
+
+.team-item-icon-link {
+  display: flex;
+  height: 40px;
+  width: 40px;
+  position: relative;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  overflow: hidden;
+  justify-content: center;
+  align-items: center;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-item-icon {
+  position: absolute;
+  height: 16px;
+  width: 16px;
+  /* fill: transparent;
+   stroke: #F4F4FD;
+   background-color: #4d5ae5;
+   padding: 12px; 
+   border-radius: 50%; */
+  /* margin: 0 auto; */
+}
+
+.team-item-icon-link:hover {
+  background-color: #404bbf;
+}
 /**---------------------------------------------*/
 
 /**---------------SECTION 4. PORTFOLIO------------------------*/
@@ -316,6 +420,10 @@ address {
   width: calc((100% - 48px) / 3);
 }
 
+.portfolio-item:hover .portfolio-item-cover-wrap {
+  transform: translateY(0%);
+}
+
 .portfolio-item-content {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
@@ -337,7 +445,29 @@ address {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+.portfolio-item-cover-text {
+  color: #f4f4fd;
+  font-size: 16px;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.02em;
+}
 
+.portfolio-content-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-item-cover-wrap {
+  position: absolute;
+  background: #4d5ae5;
+  top: 0;
+  height: 100%;
+  padding-top: 40px;
+  padding-left: 32px;
+  padding-right: 32px;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 /**---------------------------------------------*/
 
 /**---------------FOOTER------------------------*/
@@ -347,7 +477,6 @@ address {
   padding-top: 100px;
 }
 .logo {
- 
 }
 .footer-logo {
   font-family: Raleway, sans-serif;
@@ -371,7 +500,6 @@ address {
   /* 116.667% */
   letter-spacing: 0.03em;
   text-transform: uppercase;
-
 }
 .footer-text {
   color: #f4f4fd;
@@ -381,4 +509,53 @@ address {
   letter-spacing: 0.02em;
   /* padding-top: 16px; */
   width: 264px;
+}
+.footer-social-list {
+  display: flex;
+  gap: 16px;
+}
+.footer-conteiner {
+  display: flex;
+  gap: 120px;
+}
+
+.footer-social-title {
+color: #FFF;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5; /* 150% */
+letter-spacing: 0.2em;
+margin-bottom: 16px;
+}
+
+.footer-icons-list-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.footer-item-icon-link {
+  display: flex;
+  height: 40px;
+  width: 40px;
+  position: relative;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  overflow: hidden;
+  justify-content: center;
+  align-items: center;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-item-icon {
+  position: absolute;
+  height: 24px;
+  width: 24px;
+}
+
+.footer-item-icon-link:hover {
+  background-color: #31D0AA;
 }
