--- a/css/styles.css
+++ b/css/styles.css
@@ -110,10 +110,13 @@ img {
   letter-spacing: 0.02em;
   display: block;
   /*padding: 24px 0;*/
+}
+.nav-item:first-child {
   position: relative;
+  color: #404bbf;
 }
 
-.nav-link {
+.nav-item .nav-link {
   padding-top: 24px;
   padding-bottom: 24px;
   transition-property: color;
@@ -125,7 +128,7 @@ img {
 .nav-link:focus {
   color: #404bbf;
 }
-.nav-link:active::after {
+.nav-link:first-child::after {
   content: "";
   width: 100%;
   height: 4px;
