--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,7 @@ img {
 .nav-link:focus {
   color: #404bbf;
 }
-.nav-link:first-child::after {
+.nav-link:first-child:active::after {
   content: "";
   width: 100%;
   height: 4px;
@@ -480,9 +480,7 @@ address {
   top: 0;
   height: 100%;
   width: 100%;
-  padding-top: 40px;
-  padding-left: 32px;
-  padding-right: 32px;
+  padding: 40px 32px;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
