--- a/css/styles.css
+++ b/css/styles.css
@@ -111,9 +111,6 @@ img {
   display: block;
   /*padding: 24px 0;*/
 }
-.nav-item:first-child {
-  color: #404bbf;
-}
 
 .nav-item .nav-link {
   padding-top: 24px;
@@ -128,7 +125,11 @@ img {
 .nav-link:focus {
   color: #404bbf;
 }
-.nav-link:first-child:active::after {
+.current {
+  position: relative;
+  color: #404bbf;
+}
+.current::after {
   content: "";
   width: 100%;
   height: 4px;
