--- a/css/styles.css
+++ b/css/styles.css
@@ -174,7 +174,7 @@ address {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url("/images/people-office-1.jpg");
+    url("../images/people-office-1.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
